--- a/perl/files/config.sh-i486.in
+++ b/perl/files/config.sh-i486.in
@@ -33,8 +33,6 @@ ansi2knr=''
 aphostname='/bin/hostname'
 api_revision='5'
 api_subversion='0'
-api_version='10'
-api_versionstring='5.10.0'
 ar='ar'
 archlib=''
 archlibexp=''
@@ -530,7 +528,6 @@ dlsrc='dl_dlopen.xs'
 doublesize='8'
 drand01='drand48()'
 drand48_r_proto='0'
-dynamic_ext='B Compress/Raw/Zlib Cwd DB_File Data/Dumper Devel/DProf Devel/PPPort Devel/Peek Digest/MD5 Digest/SHA Encode Fcntl File/Glob Filter/Util/Call GDBM_File Hash/Util I18N/Langinfo IO IPC/SysV List/Util MIME/Base64 Math/BigInt/FastCalc Opcode POSIX PerlIO/encoding PerlIO/scalar PerlIO/via SDBM_File Socket Storable Sys/Hostname Sys/Syslog Text/Soundex Time/HiRes Time/Piece Unicode/Normalize XS/APItest XS/Typemap attrs re threads threads/shared Hash/Util/FieldHash'
 eagain='EAGAIN'
 ebcdic='undef'
 echo='echo'
@@ -697,7 +694,6 @@ inc_version_list=' '
 inc_version_list_init='0'
 incpath=''
 inews=''
-installarchlib='/usr/lib/perl5/5.10'
 installbin='/usr/bin'
 initialinstalllocation='/usr/bin'
 installhtml1dir=''
@@ -706,13 +702,10 @@ installman1dir=''
 installman3dir=''
 installprefix='/usr'
 installprefixexp='/usr'
-installprivlib='/usr/lib/perl5/5.10'
 installscript='/usr/bin'
-installsitearch='/usr/lib/perl5/5.10'
 installsitebin='/usr/bin'
 installsitehtml1dir=''
 installsitehtml3dir=''
-installsitelib='/usr/lib/perl5/5.10'
 installsiteman1dir=''
 installsiteman3dir=''
 installsitescript='/usr/bin'
@@ -804,7 +797,6 @@ netdb_net_type='in_addr_t'
 nm='nm'
 nm_opt=''
 nm_so_opt='--dynamic'
-nonxs_ext='Compress/Zlib Errno IO_Compress_Base IO_Compress_Zlib'
 nroff='nroff'
 nvEUformat='"E"'
 nvFUformat='"F"'
@@ -826,7 +818,6 @@ otherlibdirs=' '
 package='perl5'
 pager='/usr/bin/less'
 passcat='cat /etc/passwd'
-patchlevel='10'
 path_sep=':'
 perl5=''
 perl=''
@@ -842,8 +833,6 @@ pmake=''
 pr=''
 prefix='/usr'
 prefixexp='/usr'
-privlib='/usr/lib/perl5/5.10'
-privlibexp='/usr/lib/perl5/5.10'
 procselfexe='"/proc/self/exe"'
 prototype='define'
 ptrsize='4'
@@ -1037,8 +1026,6 @@ vendorprefix=''
 vendorprefixexp=''
 vendorscript=''
 vendorscriptexp=''
-version='5.10.0'
-version_patchlevel_string='version 10 subversion 0'
 versiononly='undef'
 vi=''
 voidflags='15'
@@ -1053,10 +1040,8 @@ config_args='-der'
 config_argc=1
 config_arg1='-der'
 PERL_REVISION=5
-PERL_VERSION=10
 PERL_SUBVERSION=0
 PERL_API_REVISION=5
-PERL_API_VERSION=10
 PERL_API_SUBVERSION=0
 PERL_PATCHLEVEL=
 PERL_CONFIG_SH=true
@@ -1066,3 +1051,97 @@ d_clock_gettime='define'
 d_clock_getres='define'
 d_clock_nanosleep='define'
 d_clock='define'
+
+# New symbols for perl 5.20.0
+bin_ELF='define'
+bootstrap_charset='undef'
+charbits='8'
+charsize='1'
+d_asctime64='undef'
+d_attribute_deprecated='define'
+d_ctime64='undef'
+d_difftime64='undef'
+d_gdbm_ndbm_h_uses_prototypes='undef'
+d_gdbmndbm_h_uses_prototypes='undef'
+d_getaddrinfo='define'
+d_getnameinfo='define'
+d_gmtime64='undef'
+d_inetntop='define'
+d_inetpton='define'
+d_ip_mreq='define'
+d_ip_mreq_source='define'
+d_ipv6_mreq='%%IPV6%%'
+d_ipv6_mreq_source='undef'
+d_isblank='define'
+d_libname_unique='undef'
+d_localtime64='undef'
+d_mktime64='undef'
+d_ndbm='undef'
+d_ndbm_h_uses_prototypes='undef'
+d_prctl='define'
+d_prctl_set_name='define'
+d_sin6_scope_id='%%IPV6%%'
+d_sockaddr_in6='%%IPV6%%'
+d_sockaddr_sa_len='undef'
+d_static_inline='define'
+d_timegm='define'
+dtrace=''
+extern_C='extern'
+hostosname=''
+i_assert='define'
+i_gdbm_ndbm='undef'
+i_gdbmndbm='undef'
+i_mallocmalloc='undef'
+i_stdbool='define'
+i_syspoll='define'
+#incpth='/usr/lib/gcc/i486-slackware-linux/4.8.2/include /usr/local/include /usr/lib/gcc/i486-slackware-linux/4.8.2/include-fixed /usr/include'
+ld_can_script='define'
+#libsfound=' /usr/lib/libnsl.so /usr/lib/libgdbm.so /usr/lib/libdb.so /usr/lib/libdl.so /usr/lib/libm.so /usr/lib/libcrypt.so /usr/lib/libutil.so /usr/lib/libc.so'
+nv_overflows_integers_at='0'
+perl_static_inline='static __inline__'
+sGMTIME_max='2147483647'
+sGMTIME_min='-2147483648'
+sLOCALTIME_max='2147483647'
+sLOCALTIME_min='-2147483648'
+#sitelib_stem='/usr/local/lib/perl5/site_perl'
+st_ino_sign='1'
+st_ino_size='8'
+#strings='/usr/include/string.h'
+sysroot=''
+targetdir=''
+targetenv=''
+targethost=''
+targetmkdir=''
+targetport=''
+targetsh='/bin/sh'
+#timeincl='/usr/include/sys/time.h /usr/include/time.h '
+usedevel='undef'
+usedtrace='undef'
+usekernprocpathname='undef'
+usensgetexecutablepath='undef'
+useversionedarchname='undef'
+vaproto='define'
+libdb_needs_pthread='N'
+
+# These symbols changed from perl 5.10.0 to 5.20.0 and probably will
+# change again for new versions, so they're included here for
+# future reference
+api_version='20'
+api_versionstring='5.20.0'
+dynamic_ext='B Compress/Raw/Bzip2 Compress/Raw/Zlib Cwd DB_File Data/Dumper Devel/PPPort Devel/Peek Digest/MD5 Digest/SHA Encode Fcntl File/DosGlob File/Glob Filter/Util/Call GDBM_File Hash/Util Hash/Util/FieldHash I18N/Langinfo IO IPC/SysV List/Util MIME/Base64 Math/BigInt/FastCalc Opcode POSIX PerlIO/encoding PerlIO/mmap PerlIO/scalar PerlIO/via SDBM_File Socket Storable Sys/Hostname Sys/Syslog Tie/Hash/NamedCapture Time/HiRes Time/Piece Unicode/Collate Unicode/Normalize XS/APItest XS/Typemap arybase attributes mro re threads threads/shared'
+installarchlib='/usr/lib/perl5/5.20'
+installprivlib='/usr/lib/perl5/5.20'
+installsitearch='/usr/lib/perl5/5.20'
+installsitelib='/usr/lib/perl5/5.20'
+nonxs_ext='Archive/Tar Attribute/Handlers AutoLoader B/Debug CGI CPAN CPAN/Meta CPAN/Meta/Requirements CPAN/Meta/YAML Carp Config/Perl/V Devel/SelfStubber Digest Dumpvalue Env Errno Exporter ExtUtils/CBuilder ExtUtils/Command ExtUtils/Constant ExtUtils/Install ExtUtils/MakeMaker ExtUtils/Manifest ExtUtils/Miniperl ExtUtils/ParseXS File/Fetch File/Find File/Path File/Temp FileCache Filter/Simple Getopt/Long HTTP/Tiny I18N/Collate I18N/LangTags IO/Compress IO/Socket/IP IO/Zlib IPC/Cmd IPC/Open3 JSON/PP Locale/Codes Locale/Maketext Locale/Maketext/Simple Math/BigInt Math/BigRat Math/Complex Memoize Module/Build Module/CoreList Module/Load Module/Load/Conditional Module/Loaded Module/Metadata NEXT Net/Ping Package/Constants Params/Check Parse/CPAN/Meta Perl/OSType PerlIO/via/QuotedPrint Pod/Checker Pod/Escapes Pod/Functions Pod/Html Pod/Parser Pod/Perldoc Pod/Simple Pod/Usage Safe Search/Dict SelfLoader Term/ANSIColor Term/Cap Term/Complete Term/ReadLine Test Test/Harness Test/Simple Text/Abbrev Text/Balanced Text/ParseWords Text/Tabs Thread/Queue Thread/Semaphore Tie/File Tie/Memoize Tie/RefHash Time/Local XSLoader autodie autouse base bignum constant encoding/warnings experimental if lib libnet parent perlfaq podlators version'
+privlib='/usr/lib/perl5/5.20'
+privlibexp='/usr/lib/perl5/5.20'
+version='5.20.0'
+version_patchlevel_string='version 20 subversion 0'
+PERL_VERSION=20
+PERL_API_VERSION=20
+patchlevel='20'
+
+# Make perl use these tools instead of the target binaries during build.
+hostgenerate='%%HOSTGENERATE%%'
+hostperl='%%HOSTMINIPERL%%'
