lang/perl: Add myself as maintainer
Signed-off-by: Marcel Denia <naoir@gmx.net>

--- a/perl/Makefile
+++ b/perl/Makefile
@@ -20,6 +20,7 @@ PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
 
 PKG_LICENSE:=GPLv1 ARTISTIC
 PKG_LICENSE_FILES:=Copying Artisitc README
+PKG_MAINTAINER:=Marcel Denia <naoir@gmx.net>
 
 PKG_BUILD_DIR:=$(BUILD_DIR)/perl/$(PKG_NAME)-$(PKG_VERSION)
 
