lang/perl-test-harness: Don't point to a specific version in URL
Signed-off-by: Marcel Denia <naoir@gmx.net>

--- a/perl-test-harness/Makefile
+++ b/perl-test-harness/Makefile
@@ -22,7 +22,7 @@ SUBMENU:=Perl
 SECTION:=lang
 CATEGORY:=Languages
 TITLE:=Perl Test Harness
-URL:=http://search.cpan.org/~ovid/Test-Harness-3.25/bin/prove
+URL:=http://search.cpan.org/dist/Test-Harness/
 DEPENDS:=+perl
 endef
 
