--- a/perl/files/config.sh-i486.in
+++ b/perl/files/config.sh-i486.in
@@ -34,8 +34,6 @@ aphostname='/bin/hostname'
 api_revision='5'
 api_subversion='0'
 ar='ar'
-archlib=''
-archlibexp=''
 archname64=''
 archname='i386-linux-uclibc'
 archobjs=''
@@ -1136,6 +1134,8 @@ installsitelib='/usr/lib/perl5/5.20'
 nonxs_ext='Archive/Tar Attribute/Handlers AutoLoader B/Debug CGI CPAN CPAN/Meta CPAN/Meta/Requirements CPAN/Meta/YAML Carp Config/Perl/V Devel/SelfStubber Digest Dumpvalue Env Errno Exporter ExtUtils/CBuilder ExtUtils/Command ExtUtils/Constant ExtUtils/Install ExtUtils/MakeMaker ExtUtils/Manifest ExtUtils/Miniperl ExtUtils/ParseXS File/Fetch File/Find File/Path File/Temp FileCache Filter/Simple Getopt/Long HTTP/Tiny I18N/Collate I18N/LangTags IO/Compress IO/Socket/IP IO/Zlib IPC/Cmd IPC/Open3 JSON/PP Locale/Codes Locale/Maketext Locale/Maketext/Simple Math/BigInt Math/BigRat Math/Complex Memoize Module/Build Module/CoreList Module/Load Module/Load/Conditional Module/Loaded Module/Metadata NEXT Net/Ping Package/Constants Params/Check Parse/CPAN/Meta Perl/OSType PerlIO/via/QuotedPrint Pod/Checker Pod/Escapes Pod/Functions Pod/Html Pod/Parser Pod/Perldoc Pod/Simple Pod/Usage Safe Search/Dict SelfLoader Term/ANSIColor Term/Cap Term/Complete Term/ReadLine Test Test/Harness Test/Simple Text/Abbrev Text/Balanced Text/ParseWords Text/Tabs Thread/Queue Thread/Semaphore Tie/File Tie/Memoize Tie/RefHash Time/Local XSLoader autodie autouse base bignum constant encoding/warnings experimental if lib libnet parent perlfaq podlators version'
 privlib='/usr/lib/perl5/5.20'
 privlibexp='/usr/lib/perl5/5.20'
+archlib='/usr/lib/perl5/5.20'
+archlibexp='/usr/lib/perl5/5.20'
 version='5.20.0'
 version_patchlevel_string='version 20 subversion 0'
 PERL_VERSION=20
