lang/perl: Upgrade most x86_64 configuration symbols to match a 64-bit environment
Signed-off-by: Marcel Denia <naoir@gmx.net>

--- a/perl/files/config.sh-x86_64.in
+++ b/perl/files/config.sh-x86_64.in
@@ -28,14 +28,14 @@ _exe=''
 _o='.o'
 afs='false'
 afsroot='/afs'
-alignbytes='4'
+alignbytes='8'
 ansi2knr=''
 aphostname='/bin/hostname'
 api_revision='5'
 api_subversion='0'
 ar='ar'
 archname64=''
-archname='i386-linux-uclibc'
+archname='x86_64-linux-uclibc'
 archobjs=''
 asctime_r_proto='0'
 awk='awk'
@@ -45,7 +45,7 @@ bin='/usr/bin'
 binexp='/usr/bin'
 bison='bison'
 byacc='byacc'
-byteorder='1234'
+byteorder='12345678'
 c=''
 castflags='0'
 cat='cat'
@@ -324,7 +324,7 @@ d_munmap='define'
 d_mymalloc='undef'
 d_nice='define'
 d_nl_langinfo='define'
-d_nv_preserves_uv='define'
+d_nv_preserves_uv='undef'
 d_nv_zero_is_allbits_zero='define'
 d_off64_t='undef'
 d_old_pthread_create_joinable='undef'
@@ -338,7 +338,7 @@ d_phostname='undef'
 d_pipe='define'
 d_poll='define'
 d_portable='define'
-d_printf_format_null='define'
+d_printf_format_null='undef'
 d_procselfexe='define'
 d_pseudofork='undef'
 d_pthread_atfork='undef'
@@ -486,7 +486,7 @@ d_tmpnam_r='undef'
 d_truncate='define'
 d_ttyname_r='undef'
 d_tzname='define'
-d_u32align='undef'
+d_u32align='define'
 d_ualarm='define'
 d_umask='define'
 d_uname='define'
@@ -577,7 +577,7 @@ getservbyname_r_proto='0'
 getservbyport_r_proto='0'
 getservent_r_proto='0'
 getspnam_r_proto='0'
-gidformat='"lu"'
+gidformat='"u"'
 gidsign='1'
 gidsize='4'
 gidtype='gid_t'
@@ -600,9 +600,9 @@ html3direxp=''
 i16size='2'
 i16type='short'
 i32size='4'
-i32type='long'
+i32type='int'
 i64size='8'
-i64type='long long'
+i64type='long'
 i8size='1'
 i8type='char'
 i_arpainet='define'
@@ -720,7 +720,7 @@ installvendorscript=''
 intsize='4'
 issymlink='test -h'
 ivdformat='"ld"'
-ivsize='4'
+ivsize='8'
 ivtype='long'
 known_extensions='B Compress/Raw/Zlib Cwd DB_File Data/Dumper Devel/DProf Devel/PPPort Devel/Peek Digest/MD5 Digest/SHA Encode Fcntl File/Glob Filter/Util/Call GDBM_File Hash/Util I18N/Langinfo IO IPC/SysV List/Util MIME/Base64 Math/BigInt/FastCalc NDBM_File ODBM_File Opcode POSIX PerlIO/encoding PerlIO/scalar PerlIO/via SDBM_File Socket Storable Sys/Hostname Sys/Syslog Text/Soundex Time/HiRes Time/Piece Unicode/Normalize Win32 Win32API/File Win32CORE XS/APItest XS/Typemap attrs re threads threads/shared Hash/Util/FieldHash'
 ksh=''
@@ -749,9 +749,9 @@ lns='/bin/ln -s'
 localtime_r_proto='0'
 locincpth=' '
 loclibpth=' '
-longdblsize='12'
+longdblsize='16'
 longlongsize='8'
-longsize='4'
+longsize='8'
 lp=''
 lpr=''
 ls='ls'
@@ -782,14 +782,14 @@ modetype='mode_t'
 more='more'
 multiarch='undef'
 mv=''
-myarchname='i386-linux-uclibc'
+myarchname='x86_64-linux-uclibc'
 mydomain='.dev.null'
 myhostname='maia'
-myuname='linux maia 2.6.25 #2 sat apr 19 09:46:49 cest 2008 i686 unknown unknown gnulinux '
+myuname='linux maia 2.6.25 #2 sat apr 19 09:46:49 cest 2008 x86_64 unknown unknown gnulinux '
 n='-n'
-need_va_copy='undef'
+need_va_copy='define'
 netdb_hlen_type='size_t'
-netdb_host_type='const void *'
+netdb_host_type='char *'
 netdb_name_type='const char *'
 netdb_net_type='in_addr_t'
 nm='nm'
@@ -799,7 +799,7 @@ nroff='nroff'
 nvEUformat='"E"'
 nvFUformat='"F"'
 nvGUformat='"G"'
-nv_preserves_uv_bits='32'
+nv_preserves_uv_bits='53'
 nveformat='"e"'
 nvfformat='"f"'
 nvgformat='"g"'
@@ -833,9 +833,9 @@ prefix='/usr'
 prefixexp='/usr'
 procselfexe='"/proc/self/exe"'
 prototype='define'
-ptrsize='4'
-quadkind='3'
-quadtype='long long'
+ptrsize='8'
+quadkind='2'
+quadtype='long'
 randbits='48'
 randfunc='drand48'
 random_r_proto='0'
@@ -853,22 +853,22 @@ runnm='false'
 sPRIEUldbl='"LE"'
 sPRIFUldbl='"LF"'
 sPRIGUldbl='"LG"'
-sPRIXU64='"LX"'
-sPRId64='"Ld"'
+sPRIXU64='"lX"'
+sPRId64='"ld"'
 sPRIeldbl='"Le"'
 sPRIfldbl='"Lf"'
 sPRIgldbl='"Lg"'
-sPRIi64='"Li"'
-sPRIo64='"Lo"'
-sPRIu64='"Lu"'
-sPRIx64='"Lx"'
+sPRIi64='"li"'
+sPRIo64='"lo"'
+sPRIu64='"lu"'
+sPRIx64='"lx"'
 sSCNfldbl='"Lf"'
 sched_yield='sched_yield()'
 scriptdir='/usr/bin'
 scriptdirexp='/usr/bin'
 sed='sed'
 seedfunc='srand48'
-selectminbits='32'
+selectminbits='64'
 selecttype='fd_set *'
 sendmail=''
 setgrent_r_proto='0'
@@ -911,7 +911,7 @@ siteprefix='/usr'
 siteprefixexp='/usr'
 sitescript='/usr/bin'
 sitescriptexp='/usr/bin'
-sizesize='4'
+sizesize='8'
 sizetype='size_t'
 sleep=''
 smail=''
@@ -959,21 +959,21 @@ ttyname_r_proto='0'
 u16size='2'
 u16type='unsigned short'
 u32size='4'
-u32type='unsigned long'
+u32type='unsigned int'
 u64size='8'
-u64type='unsigned long long'
+u64type='unsigned long'
 u8size='1'
 u8type='unsigned char'
-uidformat='"lu"'
+uidformat='"u"'
 uidsign='1'
 uidsize='4'
 uidtype='uid_t'
 uname='uname'
 uniq='uniq'
-uquadtype='unsigned long long'
+uquadtype='unsigned long'
 use5005threads='undef'
-use64bitall='undef'
-use64bitint='undef'
+use64bitall='define'
+use64bitint='define'
 usecrosscompile='define'
 usedl='define'
 usefaststdio='undef'
@@ -1001,7 +1001,7 @@ usrinc='%%INCDIRS%%'
 uuname=''
 uvXUformat='"lX"'
 uvoformat='"lo"'
-uvsize='4'
+uvsize='8'
 uvtype='unsigned long'
 uvuformat='"lu"'
 uvxformat='"lx"'
@@ -1097,10 +1097,10 @@ ld_can_script='define'
 #libsfound=' /usr/lib/libnsl.so /usr/lib/libgdbm.so /usr/lib/libdb.so /usr/lib/libdl.so /usr/lib/libm.so /usr/lib/libcrypt.so /usr/lib/libutil.so /usr/lib/libc.so'
 nv_overflows_integers_at='0'
 perl_static_inline='static __inline__'
-sGMTIME_max='2147483647'
-sGMTIME_min='-2147483648'
-sLOCALTIME_max='2147483647'
-sLOCALTIME_min='-2147483648'
+sGMTIME_max='67768036191676799'
+sGMTIME_min='-62167219200'
+sLOCALTIME_max='67768036191673199'
+sLOCALTIME_min='-62167222408'
 #sitelib_stem='/usr/local/lib/perl5/site_perl'
 st_ino_sign='1'
 st_ino_size='8'
