lang/perl: Adjust some leftover x86_64 configuration symbols
Signed-off-by: Marcel Denia <naoir@gmx.net>

--- a/perl/files/config.sh-x86_64.in
+++ b/perl/files/config.sh-x86_64.in
@@ -547,7 +547,7 @@ fflushall='undef'
 find=''
 firstmakefile='makefile'
 flex=''
-fpossize='20'
+fpossize='16'
 fpostype='fpos_t'
 freetype='void'
 from=':'
@@ -604,7 +604,7 @@ i32type='int'
 i64size='8'
 i64type='long'
 i8size='1'
-i8type='char'
+i8type='signed char'
 i_arpainet='define'
 i_bsdioctl=''
 i_crypt='define'
@@ -943,7 +943,7 @@ subversion='0'
 sysman='/usr/share/man/man1'
 tail=''
 tar=''
-targetarch='i386-linux-uclibc'
+targetarch='x86_64-linux-uclibc'
 tbl=''
 tee=''
 test='test'
