lang/perl-*: Add/update licensing information
Signed-off-by: Marcel Denia <naoir@gmx.net>

--- a/perl-compress-bzip2/Makefile
+++ b/perl-compress-bzip2/Makefile
@@ -15,6 +15,8 @@ PKG_MD5SUM:=d8b809f6efe3edb33f81d608c932b2ef
 PKG_SOURCE_URL:=http://www.cpan.org/authors/id/R/RU/RURBAN/
 PKG_SOURCE:=Compress-Bzip2-$(PKG_VERSION).tar.gz
 
+PKG_LICENSE:=GPLv1+ ARTISTIC
+
 PKG_BUILD_DIR:=$(BUILD_DIR)/perl/Compress-Bzip2-$(PKG_VERSION)
 
 include $(INCLUDE_DIR)/package.mk
