--- a/perl-dbi/Makefile
+++ b/perl-dbi/Makefile
@@ -15,6 +15,8 @@ PKG_MD5SUM:=444d3c305e86597e11092b517794a840
 PKG_SOURCE_URL:=http://search.cpan.org/CPAN/authors/id/T/TI/TIMB/
 PKG_SOURCE:=DBI-$(PKG_VERSION).tar.gz
 
+PKG_LICENSE:=GPLv1+ ARTISTIC
+
 PKG_BUILD_DIR:=$(BUILD_DIR)/perl/DBI-$(PKG_VERSION)
 
 include $(INCLUDE_DIR)/package.mk
