--- a/perl-html-tree/Makefile
+++ b/perl-html-tree/Makefile
@@ -15,6 +15,8 @@ PKG_MD5SUM:=6352f50be402301f79b580dd235d7762
 PKG_SOURCE_URL:=http://search.cpan.org/CPAN/authors/id/P/PE/PETEK
 PKG_SOURCE:=HTML-Tree-$(PKG_VERSION).tar.gz
 
+PKG_LICENSE:=GPLv1+ ARTISTIC
+
 PKG_BUILD_DIR:=$(BUILD_DIR)/perl/HTML-Tree-$(PKG_VERSION)
 
 include $(INCLUDE_DIR)/package.mk
