--- a/perl-test-harness/Makefile
+++ b/perl-test-harness/Makefile
@@ -15,8 +15,7 @@ PKG_MD5SUM:=a1241b628dc80f5271ed9235c211e55c
 PKG_SOURCE_URL:=http://search.cpan.org/CPAN/authors/id/O/OV/OVID
 PKG_SOURCE:=Test-Harness-$(PKG_VERSION).tar.gz
 
-PKG_LICENSE:=GPLv2 ARTISTIC
-PKG_LICENSE_FILES:=
+PKG_LICENSE:=GPLv1+ ARTISTIC
 
 PKG_BUILD_DIR:=$(BUILD_DIR)/perl/Test-Harness-$(PKG_VERSION)
 
