--- a/perl-www-curl/Makefile
+++ b/perl-www-curl/Makefile
@@ -15,6 +15,9 @@ PKG_MD5SUM:=997ac81cd6b03b30b36f7cd930474845
 PKG_SOURCE_URL:=http://search.cpan.org/CPAN/authors/id/S/SZ/SZBALINT
 PKG_SOURCE:=WWW-Curl-$(PKG_VERSION).tar.gz
 
+PKG_LICENSE:=GPLv1+ ARTISTIC
+PKG_LICENSE_FILES:=LICENSE
+
 PKG_BUILD_DIR:=$(BUILD_DIR)/perl/WWW-Curl-$(PKG_VERSION)
 
 include $(INCLUDE_DIR)/package.mk
