--- a/perl-www-mechanize/Makefile
+++ b/perl-www-mechanize/Makefile
@@ -15,6 +15,8 @@ PKG_SOURCE:=WWW-Mechanize-$(PKG_VERSION).tar.gz
 PKG_SOURCE_URL:=http://search.cpan.org/CPAN/authors/id/P/PE/PETDANCE/
 PKG_MD5SUM:=de0a9c528c12793c881151301bc14d1a
 
+PKG_LICENSE:=GPLv1+ ARTISTIC
+
 PKG_BUILD_DIR:=$(BUILD_DIR)/perl/WWW-Mechanize-$(PKG_VERSION)
 
 include $(INCLUDE_DIR)/package.mk
