--- a/perl-html-parser/Makefile
+++ b/perl-html-parser/Makefile
@@ -15,6 +15,8 @@ PKG_MD5SUM:=9128a45893097dfa3bf03301b19c5efe
 PKG_SOURCE_URL:=http://search.cpan.org/CPAN/authors/id/G/GA/GAAS
 PKG_SOURCE:=HTML-Parser-$(PKG_VERSION).tar.gz
 
+PKG_LICENSE:=GPLv1+ ARTISTIC
+
 PKG_BUILD_DIR:=$(BUILD_DIR)/perl/HTML-Parser-$(PKG_VERSION)
 
 include $(INCLUDE_DIR)/package.mk
