--- a/perl-lockfile-simple/Makefile
+++ b/perl-lockfile-simple/Makefile
@@ -15,6 +15,8 @@ PKG_MD5SUM:=4421283b4f32549e5299963734170044
 PKG_SOURCE_URL:=http://search.cpan.org/CPAN/authors/id/J/JV/JV
 PKG_SOURCE:=LockFile-Simple-$(PKG_VERSION).tar.gz
 
+PKG_LICENSE:=GPLv2+ ARTISTIC
+
 PKG_BUILD_DIR:=$(BUILD_DIR)/perl/LockFile-Simple-$(PKG_VERSION)
 
 include $(INCLUDE_DIR)/package.mk
