lang/perl-*: Update PKG_SOURCE_URL
search.cpan.org seems to have some problems from time to time.

Signed-off-by: Marcel Denia <naoir@gmx.net>

--- a/perl-dbi/Makefile
+++ b/perl-dbi/Makefile
@@ -12,7 +12,7 @@ PKG_VERSION:=1.631
 PKG_RELEASE:=1
 PKG_MD5SUM:=444d3c305e86597e11092b517794a840
 
-PKG_SOURCE_URL:=http://search.cpan.org/CPAN/authors/id/T/TI/TIMB/
+PKG_SOURCE_URL:=http://www.cpan.org/authors/id/T/TI/TIMB/
 PKG_SOURCE:=DBI-$(PKG_VERSION).tar.gz
 
 PKG_LICENSE:=GPLv1+ ARTISTIC
