--- a/perl-html-tree/Makefile
+++ b/perl-html-tree/Makefile
@@ -12,7 +12,7 @@ PKG_VERSION:=3.23
 PKG_RELEASE:=2
 PKG_MD5SUM:=6352f50be402301f79b580dd235d7762
 
-PKG_SOURCE_URL:=http://search.cpan.org/CPAN/authors/id/P/PE/PETEK
+PKG_SOURCE_URL:=http://www.cpan.org/authors/id/P/PE/PETEK/
 PKG_SOURCE:=HTML-Tree-$(PKG_VERSION).tar.gz
 
 PKG_LICENSE:=GPLv1+ ARTISTIC
