--- a/perl-www/Makefile
+++ b/perl-www/Makefile
@@ -12,7 +12,7 @@ PKG_VERSION:=5.837
 PKG_RELEASE:=1
 PKG_MD5SUM:=9bbf1bce482b0bac98bb4f04253c03d0
 
-PKG_SOURCE_URL:=http://search.cpan.org/CPAN/authors/id/G/GA/GAAS
+PKG_SOURCE_URL:=http://www.cpan.org/authors/id/G/GA/GAAS/
 PKG_SOURCE:=libwww-perl-$(PKG_VERSION).tar.gz
 
 PKG_LICENSE:=GPLv1+ ARTISTIC
