--- a/perl-net-telnet/Makefile
+++ b/perl-net-telnet/Makefile
@@ -12,7 +12,7 @@ PKG_VERSION:=3.04
 PKG_RELEASE:=1
 PKG_MD5SUM:=d2514080116c1b0fa5f96295c84538e3
 
-PKG_SOURCE_URL:=http://search.cpan.org/CPAN/authors/id/J/JR/JROGERS
+PKG_SOURCE_URL:=http://www.cpan.org/authors/id/J/JR/JROGERS/
 PKG_SOURCE:=Net-Telnet-$(PKG_VERSION).tar.gz
 
 PKG_LICENSE:=GPLv1+ ARTISTIC
