--- a/perl-www-curl/Makefile
+++ b/perl-www-curl/Makefile
@@ -12,7 +12,7 @@ PKG_VERSION:=4.17
 PKG_RELEASE:=1
 PKG_MD5SUM:=997ac81cd6b03b30b36f7cd930474845
 
-PKG_SOURCE_URL:=http://search.cpan.org/CPAN/authors/id/S/SZ/SZBALINT
+PKG_SOURCE_URL:=http://www.cpan.org/authors/id/S/SZ/SZBALINT/
 PKG_SOURCE:=WWW-Curl-$(PKG_VERSION).tar.gz
 
 PKG_LICENSE:=GPLv1+ ARTISTIC
