--- a/perl-dbi/Makefile
+++ b/perl-dbi/Makefile
@@ -16,6 +16,7 @@ PKG_SOURCE:=DBI-$(PKG_VERSION).tar.gz
 PKG_MD5SUM:=444d3c305e86597e11092b517794a840
 
 PKG_LICENSE:=GPLv1+ ARTISTIC
+PKG_MAINTAINER:=Marcel Denia <naoir@gmx.net>
 
 PKG_BUILD_DIR:=$(BUILD_DIR)/perl/DBI-$(PKG_VERSION)
 
