--- a/perl-www-curl/Makefile
+++ b/perl-www-curl/Makefile
@@ -17,6 +17,7 @@ PKG_MD5SUM:=997ac81cd6b03b30b36f7cd930474845
 
 PKG_LICENSE:=GPLv1+ ARTISTIC
 PKG_LICENSE_FILES:=LICENSE
+PKG_MAINTAINER:=Marcel Denia <naoir@gmx.net>
 
 PKG_BUILD_DIR:=$(BUILD_DIR)/perl/WWW-Curl-$(PKG_VERSION)
 
