--- a/perl-html-tree/Makefile
+++ b/perl-html-tree/Makefile
@@ -17,6 +17,7 @@ PKG_SOURCE:=HTML-Tree-$(PKG_VERSION).tar.gz
 PKG_MD5SUM:=6352f50be402301f79b580dd235d7762
 
 PKG_LICENSE:=GPLv1+ ARTISTIC
+PKG_MAINTAINER:=Marcel Denia <naoir@gmx.net>
 
 PKG_BUILD_DIR:=$(BUILD_DIR)/perl/HTML-Tree-$(PKG_VERSION)
 
