--- a/perl-lockfile-simple/Makefile
+++ b/perl-lockfile-simple/Makefile
@@ -16,6 +16,7 @@ PKG_SOURCE:=LockFile-Simple-$(PKG_VERSION).tar.gz
 PKG_MD5SUM:=4421283b4f32549e5299963734170044
 
 PKG_LICENSE:=GPLv2+ ARTISTIC
+PKG_MAINTAINER:=Marcel Denia <naoir@gmx.net>
 
 PKG_BUILD_DIR:=$(BUILD_DIR)/perl/LockFile-Simple-$(PKG_VERSION)
 
