--- a/perl-net-telnet/Makefile
+++ b/perl-net-telnet/Makefile
@@ -16,6 +16,7 @@ PKG_SOURCE:=Net-Telnet-$(PKG_VERSION).tar.gz
 PKG_MD5SUM:=d2514080116c1b0fa5f96295c84538e3
 
 PKG_LICENSE:=GPLv1+ ARTISTIC
+PKG_MAINTAINER:=Marcel Denia <naoir@gmx.net>
 
 PKG_BUILD_DIR:=$(BUILD_DIR)/perl/Net-Telnet-$(PKG_VERSION)
 
