--- a/perl-www-mechanize/Makefile
+++ b/perl-www-mechanize/Makefile
@@ -16,6 +16,7 @@ PKG_SOURCE_URL:=http://www.cpan.org/authors/id/P/PE/PETDANCE/
 PKG_MD5SUM:=de0a9c528c12793c881151301bc14d1a
 
 PKG_LICENSE:=GPLv1+ ARTISTIC
+PKG_MAINTAINER:=Marcel Denia <naoir@gmx.net>
 
 PKG_BUILD_DIR:=$(BUILD_DIR)/perl/WWW-Mechanize-$(PKG_VERSION)
 
