perl-dbi: Build host package
Signed-off-by: Marcel Denia <naoir@gmx.net>

--- a/perl-dbi/Makefile
+++ b/perl-dbi/Makefile
@@ -19,8 +19,10 @@ PKG_LICENSE:=GPLv1+ ARTISTIC
 PKG_MAINTAINER:=Marcel Denia <naoir@gmx.net>
 
 PKG_BUILD_DIR:=$(BUILD_DIR)/perl/DBI-$(PKG_VERSION)
+HOST_BUILD_DIR:=$(BUILD_DIR_HOST)/perl/DBI-$(PKG_VERSION)
 
 include $(INCLUDE_DIR)/package.mk
+include $(INCLUDE_DIR)/host-build.mk
 include ../perl/perlmod.mk
 
 define Package/perl-dbi
@@ -40,9 +42,22 @@ define Build/Compile
 	$(call perlmod/Compile,,)
 endef
 
+define Host/Configure
+	$(call perlmod/host/Configure,,)
+endef
+
+define Host/Compile
+	$(call perlmod/host/Compile,,)
+endef
+
+define Host/Install
+	$(call perlmod/host/Install,$(1),)
+endef
+
 define Package/perl-dbi/install
 	$(call perlmod/Install,$(1),DB* auto/DBI,DBI/W32ODBC.pm auto/DBI/*.h)
 endef
 
 
 $(eval $(call BuildPackage,perl-dbi))
+$(eval $(call HostBuild))
