micropython-lib: fix DEPENDS
Signed-off-by: Roger D <rogerdammit@gmail.com>

--- a/micropython-lib/Makefile
+++ b/micropython-lib/Makefile
@@ -30,7 +30,7 @@ define Package/micropython-lib
     CATEGORY:=Languages
     TITLE:=micropython-lib
     URL:=https://github.com/micropython/micropython-lib
-    DEPENDS:=micropython
+    DEPENDS:=+micropython
 endef
 
 define Package/micropython-lib/description
